force-app/main/default/objects/Pokemon__c/fields/Altura__c.field-meta.xml
<CustomField>
    <fullName>Altura__c</fullName>
    <label>Altura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>