force-app/main/default/objects/Pokemon__c/fields/Generacion__c.field-meta.xml
<CustomField>
    <fullName>Generacion__c</fullName>
    <formula>IF(ExtId__c &lt;= 151,
  1,
      IF(ExtId__c &gt; 151  &amp;&amp; ExtId__c &lt;= 251, 
      2,
          IF(ExtId__c &gt; 251  &amp;&amp; ExtId__c &lt;= 386,
          3,
              IF(ExtId__c &gt; 386 &amp;&amp; ExtId__c &lt;= 493,
              4,
                   IF(ExtId__c &gt; 493 &amp;&amp; ExtId__c &lt;= 649,
                   5,
                        IF(ExtId__c &gt; 649 &amp;&amp; ExtId__c &lt;= 721,
                        6,
                             IF(ExtId__c &gt; 721 &amp;&amp; ExtId__c &lt;= 809,
                             7,
                                   IF(ExtId__c &gt; 809 &amp;&amp; ExtId__c &lt;= 898,
                                   8,
                                   0))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generacion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>