force-app/main/default/objects/Pokemon__c/fields/Numero_de_Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Pokemon__c</fullName>
    <label>Numero de Pokemon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>